<resources>
    <string name="app_name">The Gifting App</string>
    <string name="response"></string>
    <string name="nudge">The Gifting App</string>
    <string name="the_gifting_app">The Gifting App</string>
    <string name="splash_bottom">The Gifting App that reminds you of your friends and \nfamilys special occasions, then recommentds\n the perfect gift to get them.</string>
    <string name="profile_update_success">Profile update successfully</string>
    <string name="invalid_email">Please enter valid email</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="step_1">Step 1</string>
    <string name="slide_1_title">ADD PROFILES</string>
    <string name="slide_1_desc">Upload profiles of friends and family\ndirectly from Facebook, from your phone contacts,\nor manually.</string>
    <string name="step_2">Step 2</string>
    <string name="slide_2_title">TELL US ABOUT THEM</string>
    <string name="slide_2_desc">What makes your friends and family tick?\nChoose personality trails for your profiles so we can\nrecommend the perfect gift for any occasion.</string>
    <string name="step_3">Step 3</string>
    <string name="slide_3_title">ADD SOME OCCASIONS</string>
    <string name="slide_3_desc">Birthdays, Anniversaries, Christmas, Valentines...\nany important dates that need to be\ncelebrated with a gift.</string>
    <string name="step_4">Step 4</string>
    <string name="slide_4_title">GET REMINDER</string>
    <string name="slide_4_desc">Sit back safe in the knowledge that\nyou will never iss an important occasion again by\nchoosing the reminder date and frequency.</string>
    <string name="step_5">Step 5</string>
    <string name="slide_5_title">FIND THE PERFECT GIFT</string>
    <string name="slide_5_desc">All directly from high sheet brands, you know\nand love, that are specific to the occasion, profile settings\nand budget.</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play again</string>
    <string name="great">Great!</string>
    <string name="all_set_up">you\'re all set up and ready to roll.</string>
    <string name="first_screen_bottom_text">By signing up or logging in, you agree to our</string>
    <string name="terms_and_condition"> Terms &amp; conditions</string>
    <string name="privacy_policy"> Privacy policy</string>
    <string name="privacy_heading_text">By signing up to our app you agree to the latest Terms\n&amp; Conditions and our Privacy Policy</string>
    <string name="terms_conditions_text">By signing up to our app you agree to the latest Terms\n&amp; Conditions and our Privacy Policy</string>
    <string name="feedback_box_hint">We values your feedback, let us know what you think here...</string>
    <string name="all_rights">2018 all rights reserved</string>
    <string name="cd_item_delete_button">Delete item</string>
    <string name="signIn">Sign In</string>
    <string name="signInFaceBook">Sign In with Facebook</string>
    <string name="nudge_facebook_text">The gifting app would like to access : </string>
    <string name="facebook_profile">Your profile</string>
    <string name="friends">Friends</string>
    <string name="dates">Dates</string>
    <string name="no_thank_you">No thank you</string>
    <string name="continuetxt">Continue</string>
    <string name="back">back</string>
    <string name="forgetpassword">Forgot password ?</string>
    <string name="account_details">Account details</string>
    <string name="upload_picture">Upload your picture</string>
    <string name="name"> First name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="birthday">Birthday</string>
    <string name="termsconditions">Terms and conditions</string>
    <string name="conditiontext">Please confirm you agree to our terms and conditions. You can read them <u><font color='white'>here</font></u>.</string>
    <string name="create">Proceed</string>
    <string name="internal_storage">image</string>
    <string name="network_connectivity">Please check your network connectivity !</string>
    <string name="from_facebook">From facebook</string>
    <string name="from_contact">From contacts</string>
    <string name="upload_manually">Upload manually</string>
    <string name="upload_profiles">Upload profiles</string>
    <string name="add_profile_text">Click the icon to start adding your friends and family </string>
    <string name="proceedtxt">Add profile</string>
    <string name="title_activity_add_profile_view_pager">AddProfileViewPagerActivity</string>
    <string name="enter_name">Enter name</string>
    <string name="notification_settings">Push notifications</string>
    <string name="delete_profile">Delete account</string>
    <string name="success">Success !</string>
    <string name="upload_more">Upload  more profiles</string>
    <string name="title_activity_grid_from_contacts">GridFromContactsActivity</string>
    <string name="search">Search here</string>
    <string name="doneStr">Done</string>
    <string-array name="relationship_arrays">
        <item>Mother</item>
        <item>Father</item>
        <item>Son</item>
        <item>Daughter</item>
        <item>Friend</item>
    </string-array>
    <string-array name="set_reminder_array">
        <item>1 day</item>
        <item>2 day</item>
        <item>3 day</item>
        <item>4 day</item>
        <item>5 day</item>
    </string-array>
    <string-array name="choose_occashion_arrays">
        <item>Mothers Day</item>
        <item>Fathers Day</item>
        <item>Valetines Day</item>
        <item>New Year</item>
        <item>Christmas</item>
    </string-array>
    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="budget_arrays">
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>500</item>
        <item>1000</item>
    </string-array>
    <string-array name="persona_image">
        <item>R.drawable.iphone6</item>
    </string-array>
    <string name="title1">Camera</string>
    <string name="title2">Camera</string>
    <string name="title3">Camera</string>
    <string name="title4">Camera</string>
    <string name="country_prompt">Choose a country</string>
    <string name="addAnotherProfileTxt">Add another friend</string>
    <string name="fathersday">Father\"s Day 10/05/17</string>
    <string name="more">More</string>
    <string name="featured_gifts">Featured gifts</string>
    <string name="searchfriends">Search your friends and family</string>
    <string name="add_date">Add date</string>
    <string name="relationship">Relation</string>
    <string name="gender">Gender</string>
    <string name="location">Address</string>
    <string name="budget">Budget</string>
    <string name="date_place_holder">Birthday</string>
    <string name="select_persona">Select the profile that best suits Tim</string>
    <string name="choose_occassion">CHOOSE AN OCCASION</string>
    <string name="choose_one">Choose one of our preset dates</string>
    <string name="enter_event">Enter your event date</string>
    <string name="create_occassion">CREATE A Custom OCCASION</string>
    <string name="create_one">Create your own date and name</string>
    <string name="enter_event_name">Enter your event name</string>
    <string name="saveStr">Save</string>
    <string name="please_fill_all_required_fields">Please fill all Required fields</string>
    <string name="please_select_friend">Please select friend first</string>
    <string name="letsRock">You\'re Ready \n to go!</string>
    <string name="select_from_list">Select from list</string>
    <string name="set_reminder">Set The gifting app reminder</string>
    <string name="no_upcoming_nudge">No upcoming the gifting app !</string>
    <string name="no_featured_gift">No featured gifts !</string>
    <string name="no_profile_available">No profiles available !</string>
    <string name="no_nudge_available">No the gifting app available !</string>
    <string name="friend_id_not_avaliable">Please feed and save your friend\'s details first</string>
    <string name="friend_name_manadatory">Please fill friend Name</string>
    <string name="please_fill_event_name">Please fill event name</string>
    <string name="title_activity_terms_and_conditions">TermsAndConditionsActivity</string>
</resources>