<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_footer"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_middle_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="0dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/gif_img"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                     />

                <com.nudge.font_family.OmnesRegularTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/nudge"
                    android:visibility="gone"
                    android:textColor="@color/black"
                    android:textSize="40dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/the_gifting_app"
                    android:textSize="30dp" />
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_quickly_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="50dp"
                        android:gravity="center">

                        <View
                            android:layout_width="60dp"
                            android:layout_height="0.02dp"
                            android:layout_gravity="center"
                            android:background="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="  QUICKLY CONNECT WITH  " />

                        <View
                            android:layout_width="60dp"
                            android:layout_height="0.05dp"
                            android:layout_gravity="center"
                            android:background="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_below="@+id/ll_quickly_text">

                        <Button
                            android:id="@+id/btn_fb"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:layout_marginTop="15dp"
                            android:background="@drawable/facebook_button"
                            android:text="Continue with Facebook"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />

                        <com.facebook.login.widget.LoginButton
                            android:id="@+id/facebookButton"
                            android:textSize="12dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            />
                    </LinearLayout>


                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center">

                <View
                    android:layout_width="60dp"
                    android:layout_height="0.02dp"
                    android:layout_gravity="center"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="  OR USE YOUR EMAIL  " />

                <View
                    android:layout_width="60dp"
                    android:layout_height="0.05dp"
                    android:layout_gravity="center"
                    android:background="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:weightSum="2"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:id="@+id/signInText"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_black"
                    android:gravity="center"
                    android:padding="10dp"

                    android:text="Sign in"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/signUpText"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/red_rounded"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="Sign up"
                    android:textColor="@color/white" />

            </LinearLayout>

            <!--<Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/black_rounded"
                android:text="Sign in"
                android:layout_weight="1"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="Sign up"
                android:textColor="@color/white"
                android:background="@drawable/red_rounded"/>-->

            <!--<TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="bottom|center_horizontal"
                android:textSize="12sp"
                android:text="@string/first_screen_bottom_text"/>-->


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/rl_first_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_first_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_screen_bottom_text"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:id="@+id/tv_terms_and_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_first_text"
                    android:text="@string/terms_and_condition"
                    android:textColor="@color/red"
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:id="@+id/tv_and"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_terms_and_condition"
                    android:text=" and "
                    android:textSize="12dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp">

                <TextView
                    android:id="@+id/tv_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_and"
                    android:text="@string/privacy_policy"
                    android:textColor="@color/red"
                    android:textSize="12dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
